--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -135,9 +135,7 @@ ROBOPTIM_CORE_TEST(filter-selection-by-id)
 
 # Visualization
 ROBOPTIM_CORE_TEST(visualization-gnuplot-simple)
-
-# visualization-gnuplot-function
 ROBOPTIM_CORE_TEST(visualization-gnuplot-function)
-
-# visualization-gnuplot-differentiable-function
 ROBOPTIM_CORE_TEST(visualization-gnuplot-differentiable-function)
+ROBOPTIM_CORE_TEST(visualization-matplotlib-simple)
+ROBOPTIM_CORE_TEST(visualization-matplotlib-function)
