--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -117,6 +117,7 @@ SET(HEADERS
   ${CMAKE_SOURCE_DIR}/include/roboptim/core/visualization/gnuplot-matrix.hh
   ${CMAKE_SOURCE_DIR}/include/roboptim/core/visualization/gnuplot.hh
   ${CMAKE_SOURCE_DIR}/include/roboptim/core/visualization/matplotlib-commands.hh
+  ${CMAKE_SOURCE_DIR}/include/roboptim/core/visualization/matplotlib-function.hh
   ${CMAKE_SOURCE_DIR}/include/roboptim/core/visualization/matplotlib.hh
   ${CMAKE_SOURCE_DIR}/include/roboptim/core/visualization/util.hh
   )
