modified for MSVC(Intel)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -131,6 +131,11 @@ IF(ROBOPTIM_DO_NOT_CHECK_ALLOCATION)
   PKG_CONFIG_APPEND_CFLAGS (-DROBOPTIM_DO_NOT_CHECK_ALLOCATION)
 ENDIF()
 
+IF(MSVC)
+  SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DBOOST_LEXICAL_CAST_ASSUME_C_LOCALE")
+  PKG_CONFIG_APPEND_CFLAGS (-DBOOST_LEXICAL_CAST_ASSUME_C_LOCALE)
+ENDIF()
+
 # If compiler support symbol visibility, enable it.
 INCLUDE(CheckCCompilerFlag)
 CHECK_C_COMPILER_FLAG(-fvisibility=hidden HAS_VISIBILITY)
