--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -43,6 +43,11 @@ ADD_LIBRARY(roboptim-core SHARED
   visualization/matplotlib-commands.cc
   )
 
+IF(MSVC)
+  SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DBUILDING_ROBOPTIM")
+  PKG_CONFIG_APPEND_CFLAGS (-DBUILDING_ROBOPTIM)
+ENDIF()
+
 PKG_CONFIG_USE_DEPENDENCY(roboptim-core eigen3)
 PKG_CONFIG_USE_DEPENDENCY(roboptim-core liblog4cxx)
 
@@ -89,3 +94,8 @@ IF(NOT APPLE)
     PROPERTIES VERSION 2.0.0 SOVERSION 2)
 ENDIF()
 INSTALL(TARGETS roboptim-core-plugin-dummy-td DESTINATION ${PLUGINDIR})
+
+IF(MSVC)
+  INSTALL(FILES "${CMAKE_CURRENT_BINARY_DIR}/Debug/${PROJECT_NAME}.pdb" DESTINATION ${CMAKE_INSTALL_LIBDIR} CONFIGURATIONS Debug)
+  INSTALL(DIRECTORY "${CMAKE_CURRENT_BINARY_DIR}/Debug/" DESTINATION ${PLUGINDIR} CONFIGURATIONS Debug FILES_MATCHING PATTERN "${PROJECT_NAME}-plugin*.pdb")
+ENDIF()
