optimization-logger.hh: add test + fix for non-differentiable functions.

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -106,6 +106,7 @@ ROBOPTIM_CORE_TEST(plugin-laststate)
 
 # Callbacks.
 ROBOPTIM_CORE_TEST(solver-state)
+ROBOPTIM_CORE_TEST(optimization-logger)
 
 # Algorithm.
 ROBOPTIM_CORE_TEST(finite-difference-gradient)
