--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -84,6 +84,7 @@ SET(HEADERS
   ${CMAKE_SOURCE_DIR}/include/roboptim/core/parametrized-function.hh
   ${CMAKE_SOURCE_DIR}/include/roboptim/core/parametrized-function.hxx
   ${CMAKE_SOURCE_DIR}/include/roboptim/core/plugin/dummy-laststate.hh
+  ${CMAKE_SOURCE_DIR}/include/roboptim/core/plugin/dummy-laststate.hxx
   ${CMAKE_SOURCE_DIR}/include/roboptim/core/plugin/dummy-td.hh
   ${CMAKE_SOURCE_DIR}/include/roboptim/core/plugin/dummy.hh
   ${CMAKE_SOURCE_DIR}/include/roboptim/core/portability.hh
