--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -107,6 +107,7 @@ ROBOPTIM_CORE_TEST(plugin-laststate)
 # Callbacks.
 ROBOPTIM_CORE_TEST(solver-state)
 ROBOPTIM_CORE_TEST(optimization-logger)
+ROBOPTIM_CORE_TEST(multiplexer)
 
 # Algorithm.
 ROBOPTIM_CORE_TEST(finite-difference-gradient)
