--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -76,6 +76,7 @@ TARGET_LINK_LIBRARIES(simple roboptim-core ${Boost_LIBRARIES})
 ROBOPTIM_CORE_TEST(interval)
 ROBOPTIM_CORE_TEST(util)
 ROBOPTIM_CORE_TEST(indent)
+ROBOPTIM_CORE_TEST(detail-utility)
 ROBOPTIM_CORE_TEST(function)
 ROBOPTIM_CORE_TEST(derivable-function)
 ROBOPTIM_CORE_TEST(twice-derivable-function)
