polynomial.hh: split definitions.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -72,6 +72,7 @@ SET(HEADERS
   ${CMAKE_SOURCE_DIR}/include/roboptim/core/function/cos.hh
   ${CMAKE_SOURCE_DIR}/include/roboptim/core/function/identity.hh
   ${CMAKE_SOURCE_DIR}/include/roboptim/core/function/polynomial.hh
+  ${CMAKE_SOURCE_DIR}/include/roboptim/core/function/polynomial.hxx
   ${CMAKE_SOURCE_DIR}/include/roboptim/core/function/sin.hh
   ${CMAKE_SOURCE_DIR}/include/roboptim/core/fwd.hh
   ${CMAKE_SOURCE_DIR}/include/roboptim/core/generic-solver.hh
