optimization-logger.hh: move implementation to .hxx.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -87,6 +87,7 @@ SET(HEADERS
   ${CMAKE_SOURCE_DIR}/include/roboptim/core/numeric-quadratic-function.hh
   ${CMAKE_SOURCE_DIR}/include/roboptim/core/numeric-quadratic-function.hxx
   ${CMAKE_SOURCE_DIR}/include/roboptim/core/optimization-logger.hh
+  ${CMAKE_SOURCE_DIR}/include/roboptim/core/optimization-logger.hxx
   ${CMAKE_SOURCE_DIR}/include/roboptim/core/parametrized-function.hh
   ${CMAKE_SOURCE_DIR}/include/roboptim/core/parametrized-function.hxx
   ${CMAKE_SOURCE_DIR}/include/roboptim/core/plugin/dummy-laststate.hh
