tests: regroup filter tests.

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -124,10 +124,9 @@ ROBOPTIM_CORE_TEST(function-identity)
 ROBOPTIM_CORE_TEST(function-sin)
 ROBOPTIM_CORE_TEST(function-polynomial)
 
-ROBOPTIM_CORE_TEST(cached-function)
-ROBOPTIM_CORE_TEST(split)
-
+# Filters.
 ROBOPTIM_CORE_TEST(filter-bind)
+ROBOPTIM_CORE_TEST(filter-cached-function)
 ROBOPTIM_CORE_TEST(filter-chain)
 ROBOPTIM_CORE_TEST(filter-concatenate)
 ROBOPTIM_CORE_TEST(filter-derivative)
@@ -138,6 +137,7 @@ ROBOPTIM_CORE_TEST(filter-product)
 ROBOPTIM_CORE_TEST(filter-scalar)
 ROBOPTIM_CORE_TEST(filter-selection)
 ROBOPTIM_CORE_TEST(filter-selection-by-id)
+ROBOPTIM_CORE_TEST(filter-split)
 
 # Visualization
 ROBOPTIM_CORE_TEST(visualization-gnuplot-simple)
