Add storage-order-related test.
There are still some bugs in Eigen that need to be solved (cf. #93).
In the meantime, parts of the test are commented out.

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -91,6 +91,7 @@ ROBOPTIM_CORE_TEST(numeric-quadratic-function)
 ROBOPTIM_CORE_TEST(n-times-derivable-function)
 ROBOPTIM_CORE_TEST(parametrized-function)
 ROBOPTIM_CORE_TEST(derivable-parametrized-function)
+ROBOPTIM_CORE_TEST(storage-order)
 ROBOPTIM_CORE_TEST(ref)
 
 # Solver.
