Allow multiplots in matplotlib
Take a layout instead of just a plot number

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -150,3 +150,4 @@ ROBOPTIM_CORE_TEST(visualization-gnuplot-function)
 ROBOPTIM_CORE_TEST(visualization-gnuplot-differentiable-function)
 ROBOPTIM_CORE_TEST(visualization-matplotlib-simple)
 ROBOPTIM_CORE_TEST(visualization-matplotlib-function)
+ROBOPTIM_CORE_TEST(visualization-matplotlib-multiplot)
