--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ compiler:
   - clang
 env:
   global:
-    - secure: "Qu8mVoUePFsfwAIkE4D6wvN6TlkBjSw/Ct5NZX7xab8NgudhYGHy9dlOrky1NsO7lEa2Ulf/toXroMNNfiIyn3HmLuUN2VsMv9dZ7mA7TdBEUdKKtWqMvsRLFFeeb/8+aWDfzPvck/zeUIRodE7DSc46xR74SyRx24uz+MgfMKQ="
+    - secure: "cz8Eo/xP13SCH6j38LE4eFqAfI7H5BUQaWaK9yObZWYxCm3M6FL6TOUJ0vecwKJoPyUuk5Z9qYwZCZstkID5Vyn1xNm5PavdZcRhhb7E9knJeBSTMLAqn51I8KL64E0lyqvqgM89knotGvjgY+HshwWYmR+f9v/sbFyVoUvBvvo="
     - secure: "Slm+HqRT+Vy0SG7E9gEShuHvNz6XWRUmBhVBLVJEaYy/0Lo2qp4OjFEWDjiJwFIiXstW2Wclds4SuewAn3Tc4x7dsY+5uaMCX7S/HPzsBCjLXUwjKasUqEGaVTIYmtFJm57hOkz6K2SLUUV4intkMiwtCiq/R0xe92QTTKkHyfo="
     - secure: "F9mibfsT3Ezk0RRsgOHy8RUO82H05REGmJKLDKdHiHE3toxykQX64oNBB8txjHoi+UF0H1Gwmk4oB/pNeILtyHdSuB7hB1Muod9wspOuKrzO7SMTGdjpPw7nDjQEmtfrZFhXEGb/3xm66uSGojhwe0RJF5mOzyfno+G8SIJyos4="
     - secure: "ZKC2yAvUcDb2nyrZQNqpLgEbi2pYFSKDn/+xIj9ZH+5nkn6iA5RT4AunK13qxuBkjIr2HJcUBtMFvk/mfpvpWynX+v9i3OhpVZCbkmcjQrATjiUcG6r95oEcex7NAM5uKd/41CqV/0fzTPc3uJgPozDJlt0wsBmCEarHiRNAoo0="
@@ -29,9 +29,10 @@ branches:
   - master
   - debian
   - travis
+  - coverity_scan
 script:
   - export CMAKE_ADDITIONAL_OPTIONS="-DSTORAGE_ORDER=${ROBOPTIM_STORAGE_ORDER}"
-  - ./.travis/run build
+  - if [ ${COVERITY_SCAN_BRANCH} != 1 ]; then ./.travis/run build; fi
 after_success: ./.travis/run after_success
 after_failure: ./.travis/run after_failure
 before_install:
@@ -41,6 +42,17 @@ matrix:
   allow_failures:
     - compiler: clang
     - os: osx
+    - env: COVERITY_SCAN_BRANCH=1
 os:
   - linux
   - osx
+
+addons:
+  coverity_scan:
+    project:
+      name: "roboptim/roboptim-core"
+      description: "Build submitted via Travis CI"
+    notification_email: roboptim@googlegroups.com
+    build_command_prepend: "mkdir coverity && cd coverity && cmake .."
+    build_command: "make"
+    branch_pattern: coverity_scan
