StructuredInput implemented, tested and documented

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -77,6 +77,7 @@ ROBOPTIM_CORE_TEST(interval)
 ROBOPTIM_CORE_TEST(util)
 ROBOPTIM_CORE_TEST(indent)
 ROBOPTIM_CORE_TEST(detail-utility)
+ROBOPTIM_CORE_TEST(detail-structured-input)
 ROBOPTIM_CORE_TEST(cache)
 ROBOPTIM_CORE_TEST(function)
 ROBOPTIM_CORE_TEST(derivable-function)
