alloc.hh: handle case where EIGEN_RUNTIME_NO_MALLOC is not defined

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -140,6 +140,9 @@ SET (ROBOPTIM_DO_NOT_CHECK_ALLOCATION TRUE CACHE BOOL
 IF(ROBOPTIM_DO_NOT_CHECK_ALLOCATION)
   SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DROBOPTIM_DO_NOT_CHECK_ALLOCATION")
   PKG_CONFIG_APPEND_CFLAGS (-DROBOPTIM_DO_NOT_CHECK_ALLOCATION)
+ELSE()
+  SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DEIGEN_RUNTIME_NO_MALLOC")
+  PKG_CONFIG_APPEND_CFLAGS(-DEIGEN_RUNTIME_NO_MALLOC)
 ENDIF()
 
 IF(MSVC)
@@ -179,7 +182,6 @@ IF (NOT LTDL_H_FOUND)
 ENDIF()
 #FIXME: check that libltdl.so is available instead of adding it blindly.
 PKG_CONFIG_APPEND_LIBS(ltdl)
-PKG_CONFIG_APPEND_CFLAGS (-DEIGEN_RUNTIME_NO_MALLOC)
 HEADER_INSTALL("${HEADERS}")
 
 # Set the default storage order for Eigen matrices (ColMajor or RowMajor).
