visualization: add matplotlib plot for matrices

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -154,3 +154,4 @@ ROBOPTIM_CORE_TEST(visualization-gnuplot-differentiable-function)
 ROBOPTIM_CORE_TEST(visualization-matplotlib-simple)
 ROBOPTIM_CORE_TEST(visualization-matplotlib-function)
 ROBOPTIM_CORE_TEST(visualization-matplotlib-multiplot)
+ROBOPTIM_CORE_TEST(visualization-matplotlib-matrix)
