--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -132,6 +132,7 @@ SET(HEADERS
   ${CMAKE_SOURCE_DIR}/include/roboptim/core/visualization/gnuplot.hh
   ${CMAKE_SOURCE_DIR}/include/roboptim/core/visualization/matplotlib-commands.hh
   ${CMAKE_SOURCE_DIR}/include/roboptim/core/visualization/matplotlib-function.hh
+  ${CMAKE_SOURCE_DIR}/include/roboptim/core/visualization/matplotlib-matrix.hh
   ${CMAKE_SOURCE_DIR}/include/roboptim/core/visualization/matplotlib.hh
   )
 
