Precompile classes for dense and sparse matrices when possible

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -152,6 +152,19 @@ ELSE()
   PKG_CONFIG_APPEND_CFLAGS(-DEIGEN_RUNTIME_NO_MALLOC)
 ENDIF()
 
+SET(USE_CXX11 FALSE CACHE BOOL "Whether to use C++11")
+
+SET(ROBOPTIM_PRECOMPILE_DENSE_SPARSE FALSE CACHE BOOL
+  "Precompile code for dense and sparse matrices (C++11 required)")
+IF(ROBOPTIM_PRECOMPILE_DENSE_SPARSE)
+  IF(USE_CXX11)
+    SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DROBOPTIM_PRECOMPILED_DENSE_SPARSE -std=c++11")
+    PKG_CONFIG_APPEND_CFLAGS(-DROBOPTIM_PRECOMPILED_DENSE_SPARSE)
+  ELSE()
+    MESSAGE(WARNING "C++11 is required for explicit template instantiation")
+  ENDIF()
+ENDIF()
+
 IF(MSVC)
   SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DBOOST_LEXICAL_CAST_ASSUME_C_LOCALE")
   PKG_CONFIG_APPEND_CFLAGS (-DBOOST_LEXICAL_CAST_ASSUME_C_LOCALE)
