Fix for GCC 5.3
This looks similar to https://gcc.gnu.org/bugzilla/show_bug.cgi?id=65974,
but that bug is fixed already.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -156,6 +156,13 @@ ELSE()
   PKG_CONFIG_APPEND_CFLAGS(-DEIGEN_RUNTIME_NO_MALLOC)
 ENDIF()
 
+# Fix for apparent bug with GCC 5.3
+IF("${CMAKE_CXX_COMPILER_ID}" STREQUAL "GNU")
+  IF(CMAKE_CXX_COMPILER_VERSION VERSION_EQUAL 5.3)
+    SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wno-deprecated-declarations")
+  ENDIF()
+ENDIF()
+
 SET(USE_CXX11 FALSE CACHE BOOL "Whether to use C++11")
 
 SET(ROBOPTIM_PRECOMPILE_DENSE_SPARSE FALSE CACHE BOOL
