Add ScalingHelper class

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -107,6 +107,9 @@ ROBOPTIM_CORE_TEST(result)
 ROBOPTIM_CORE_TEST(result-with-warnings)
 ROBOPTIM_CORE_TEST(solver-error)
 
+# Helpers.
+ROBOPTIM_CORE_TEST(scaling-helper)
+
 # Example from documentation.
 ROBOPTIM_CORE_TEST(example)
 
