src/CMakeLists.txt: only instantiate templates with C++11 enabled

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -40,7 +40,7 @@ SET(ROBOPTIM_CORE_SRC
   visualization/matplotlib-matrix.cc
   )
 
-IF(ROBOPTIM_PRECOMPILE_DENSE_SPARSE)
+IF(ROBOPTIM_PRECOMPILE_DENSE_SPARSE AND USE_CXX11)
   SET(ROBOPTIM_CORE_SRC ${ROBOPTIM_CORE_SRC} roboptim-core-precompile.cc)
 ENDIF()
 
