[Win32] Remove tests that will not compile on MSVC2008

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -68,7 +68,9 @@ ROBOPTIM_CORE_TEST(interval)
 ROBOPTIM_CORE_TEST(util)
 ROBOPTIM_CORE_TEST(terminal-color)
 ROBOPTIM_CORE_TEST(indent)
-ROBOPTIM_CORE_TEST(detail-utility)
+IF(NOT WIN32)
+  ROBOPTIM_CORE_TEST(detail-utility)
+ENDIF(NOT WIN32)
 ROBOPTIM_CORE_TEST(detail-autopromote)
 ROBOPTIM_CORE_TEST(detail-structured-input)
 ROBOPTIM_CORE_TEST(cache)
@@ -94,7 +96,9 @@ ROBOPTIM_CORE_TEST(solver)
 ROBOPTIM_CORE_TEST(solver-factory)
 
 # Compile the dummy solver in this test to bypass the plug-in system.
-ROBOPTIM_CORE_TEST(simple "${CMAKE_SOURCE_DIR}/src/dummy.cc")
+IF(NOT WIN32)
+  ROBOPTIM_CORE_TEST(simple "${CMAKE_SOURCE_DIR}/src/dummy.cc")
+ENDIF(NOT WIN32)
 
 # Results.
 ROBOPTIM_CORE_TEST(result)
@@ -111,12 +115,16 @@ ROBOPTIM_CORE_TEST(example)
 ROBOPTIM_CORE_TEST(plugin)
 
 # Dynamic loading mechanism with solver's last state
-ROBOPTIM_CORE_TEST(plugin-laststate)
+IF(NOT WIN32)
+ ROBOPTIM_CORE_TEST(plugin-laststate)
+ENDIF(NOT WIN32)
 
 # Callbacks.
 ROBOPTIM_CORE_TEST(solver-state)
 ROBOPTIM_CORE_TEST(optimization-logger)
-ROBOPTIM_CORE_TEST(multiplexer)
+IF(NOT WIN32)
+  ROBOPTIM_CORE_TEST(multiplexer)
+ENDIF(NOT WIN32)
 
 # Built-in mathematical functions.
 ROBOPTIM_CORE_TEST(function-constant)
@@ -126,17 +134,23 @@ ROBOPTIM_CORE_TEST(function-sin)
 ROBOPTIM_CORE_TEST(function-polynomial)
 
 # Sum Of C1 Squares.
-ROBOPTIM_CORE_TEST(sum-of-c1-squares)
+IF(NOT WIN32)
+  ROBOPTIM_CORE_TEST(sum-of-c1-squares)
+ENDIF(NOT WIN32)
 
 # Decorators.
-ROBOPTIM_CORE_TEST(decorator-cached-function)
+IF(NOT WIN32)
+  ROBOPTIM_CORE_TEST(decorator-cached-function)
+ENDIF(NOT WIN32)
 ROBOPTIM_CORE_TEST(decorator-finite-difference-gradient)
 ROBOPTIM_CORE_TEST(decorator-finite-difference-jacobian)
 
 # Operators.
 ROBOPTIM_CORE_TEST(operator-bind)
 ROBOPTIM_CORE_TEST(operator-chain)
-ROBOPTIM_CORE_TEST(operator-concatenate)
+IF(NOT WIN32)
+  ROBOPTIM_CORE_TEST(operator-concatenate)
+ENDIF(NOT WIN32)
 ROBOPTIM_CORE_TEST(operator-derivative)
 ROBOPTIM_CORE_TEST(operator-map)
 ROBOPTIM_CORE_TEST(operator-minus)
