--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -57,9 +57,11 @@ PKG_CONFIG_USE_DEPENDENCY(roboptim-core liblog4cxx)
 
 # Add required libs to pkg-config file.
 SET(ROBOPTIM_API_BOOST_LIBRARIES date_time system filesystem)
-FOREACH(lib ${ROBOPTIM_API_BOOST_LIBRARIES})
-  PKG_CONFIG_APPEND_LIBS(boost_${lib})
-ENDFOREACH()
+IF(NOT WIN32)
+  FOREACH(lib ${ROBOPTIM_API_BOOST_LIBRARIES})
+    PKG_CONFIG_APPEND_LIBS(boost_${lib})
+  ENDFOREACH()
+ENDIF(NOT WIN32)
 
 IF(ROBOPTIM_PRECOMPILE_DENSE_SPARSE)
   # core library needs to be linked with Boost libraries (e.g. for
@@ -69,7 +71,13 @@ IF(ROBOPTIM_PRECOMPILE_DENSE_SPARSE)
   ENDFOREACH()
 ENDIF()
 
-TARGET_LINK_LIBRARIES(roboptim-core ltdl)
+IF(NOT LTDL_FOUND)
+  TARGET_LINK_LIBRARIES(roboptim-core ltdl)
+ELSE()
+  TARGET_LINK_LIBRARIES(roboptim-core ${LTDL_LIBDIR}/ltdl.lib)
+  # PKG_CONFIG_USE_LINK_DEPENDENCY(roboptim-core ltdl)
+ENDIF(NOT LTDL_FOUND)
+
 SET_TARGET_PROPERTIES(roboptim-core PROPERTIES SOVERSION 3 VERSION 3.2.0)
 INSTALL(TARGETS roboptim-core DESTINATION ${CMAKE_INSTALL_LIBDIR})
 
