Improve doc related to deprecated features

--- a/doc/Doxyfile.extra.in
+++ b/doc/Doxyfile.extra.in
@@ -1,1 +1,6 @@
 EXAMPLE_PATH+=@CMAKE_SOURCE_DIR@/doc
+
+ENABLE_PREPROCESSING = YES
+MACRO_EXPANSION      = YES
+EXPAND_ONLY_PREDEF   = YES
+PREDEFINED           = ROBOPTIM_CORE_DEPRECATED
