portability.hh: remove redundancy with config.hh
Fix #109

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -46,12 +46,8 @@ ENDIF()
 
 # Main library.
 ADD_LIBRARY(roboptim-core SHARED ${HEADERS} ${ROBOPTIM_CORE_SRC})
-
-IF(MSVC)
-  SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DBUILDING_ROBOPTIM")
-  PKG_CONFIG_APPEND_CFLAGS (-DBUILDING_ROBOPTIM)
-ENDIF()
-
+SET_TARGET_PROPERTIES(roboptim-core PROPERTIES
+  COMPILE_FLAGS "-Droboptim_core_EXPORTS")
 PKG_CONFIG_USE_DEPENDENCY(roboptim-core eigen3)
 PKG_CONFIG_USE_DEPENDENCY(roboptim-core liblog4cxx)
 
